efkyaml/es-master-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-master
  namespace: efk
  labels:
    component: elasticsearch
    role: master
spec:
  selector:
    matchLabels:
      component: elasticsearch
      role: master
  serviceName: elasticsearch-master
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
    spec:
      containers:
      - name: es-master
        image: huisebug/sec_re:elasticsearch-6.3.2
        resources:
          requests:
            cpu: 0.25
          limits:
            cpu: 1
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      storageClassName: local-storage
      accessModes: [ ReadWriteMany ]
      resources:
        requests:
          storage: 2Gi
