efkyaml/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: efk
spec:
  rules:
  - host: kibana.huisebug.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
